@@ -45,6 +45,7 @@ t/storage/DBD-SQLite-file.t
 t/storage/DBD-SQLite-in-memory.t
 t/storage/DBD-SQLite-memory.t
 t/storage/DBD-SQLite-nonalpha.t
+t/storage/DBD-SQLite-pragmas.t
 t/storage/dbd-switch-order.t
 t/tokenizer/Chars.t
 t/tokenizer/Words-utf8-text.t
