@@ -48,9 +48,9 @@ sub _backup_memory_to_disk {
 
 before _engage => sub {
     my ($self) = @_;
-    
-    my $size = $self->arguments->{cache_size};
-    $self->dbh->do("PRAGMA cache_size=$size;") if defined $size;
+
+    # Set any user-defined pragmas
+    $self->_set_pragmas;
 
     if ($self->_exists_db and $self->_backup_memory_to_disk) {
         $self->dbh->sqlite_backup_from_file($self->brain);
@@ -79,6 +79,20 @@ sub _exists_db {
     return unless defined $self->brain;
     return if $self->brain eq ':memory:';
     return -s $self->brain;
+}
+
+sub _set_pragmas {
+    my ($self) = @_;
+
+    return unless exists $self->arguments->{pragmas};
+    my $pragmas = $self->arguments->{pragmas};
+    die "Pragmas must be a HashRef" unless ref $pragmas eq 'HASH';
+
+    while (my ($k, $v) = each %$pragmas) {
+        $self->dbh->do(qq[PRAGMA $k="$v";])
+    }
+
+    return;
 }
 
 override save => sub {
@@ -127,17 +141,41 @@ storage backend.
 
 This is a hash reference which can have the following keys:
 
-B<'in_memory'>, when set to a true value, Hailo behaves much like MegaHAL.
-The entire database will be kept in memory, and only written out to disk
-when the C<save|Hailo/save> method is called and/or when the L<Hailo|Hailo>
-object gets destroyed (unless you disabled L<save_on_exit|Hailo/save_on_exit>).
-This is turned on by default.
+=head3 C<in_memory>
 
-B<'cache_size'>, the size of the page cache used by SQLite. See L<SQLite's
-documentation|http://www.sqlite.org/pragma.html#pragma_cache_size> for more
-information. Setting this value higher than the default can be beneficial,
-especially when disk IO is slow on your machine. Obviously, you shouldn't
-bother with this option if B<'in_memory'> is enabled.
+When set to a true value, Hailo behaves much like MegaHAL.  The entire
+database will be kept in memory, and only written out to disk when the
+C<save|Hailo/save> method is called and/or when the L<Hailo|Hailo>
+object gets destroyed (unless you disabled
+L<save_on_exit|Hailo/save_on_exit>). This is turned on by default, to
+disable it set C<in_memory => 0>.
+
+=head3 C<pragmas>
+
+A hash reference of L<SQLite
+pragmas|http://www.sqlite.org/pragma.html> that will be set when the
+database connection is set up, an example of this would be:
+
+    pragmas => {
+        foreign_keys => 1,
+        synchronous => 0,
+    };
+
+Setting B<'cache_size'> in particular can be benificial, it's the size
+of the page cache used by SQLite. See L<SQLite's
+documentation|http://www.sqlite.org/pragma.html#pragma_cache_size> for
+more information.
+
+Setting it will speed up Hailo, especially when disk IO is slow on
+your machine. Obviously, you shouldn't bother with this option if
+B<'in_memory'> is enabled.
+
+Setting B<'synchronous'> to B<'OFF'> or B<'journal_mode'> to B<'OFF'>
+will speed up operations at the expense of safety. Since Hailo is most
+likely not running as a mission-critical component this tradeoff
+should be acceptable in most cases, if the database becomes corrupt
+it's easy to rebuild it by retraining from the input it was trained on
+to begin with.
 
 =head1 AUTHOR
 
