@@ -2,6 +2,11 @@
 
     - Fix capitalization of the first word when followed by punctuation
 
+    - DBD::SQLite backend: It's now possible to set any PRAGMA SQLite
+      supports at the start of the connection by supplying a
+      C<pragmas> hash in C<storage_args>. See
+      Hailo::Storage::DBD::SQLite documentation for more info.
+
     - Add more exhaustive tests for the Word tokenizer. 
 
 0.17 Tue Feb 23 04:06:50 GMT 2010
